fix(blog): change font to improve readability

--- a/src/routes/blog/[slug]/post.scss
+++ b/src/routes/blog/[slug]/post.scss
@@ -13,13 +13,13 @@
   }
 
   h4 {
-    font-size: 1.25rem;
+    font-size: 1.35rem;
     line-height: 1.75rem;
   }
 
   p {
-    font-size: 1rem;
-    line-height: 1.75rem;
+    font-size: 1.2rem;
+    line-height: 2rem;
   }
 
   a {
